@@ -1532,6 +1532,16 @@ Example  : pray "neutralize land"\n\r\
 This prayer neutralizes the land on which it is cast, removing any spells, \
 prayers, songs, or chants that might have been enchanted upon it.
 
+PRAYER_NEUTRALIZE_SCROLL=PRAYER_NEUTRALIZESCROLL
+PRAYER_NEUTRALIZESCROLL=<ABILITY>\
+Usage    : PRAY "NEUTRALIZE SCROLL" [TARGET SCROLL]\n\r\
+Example  : pray "neutralize scroll" scroll\n\r\
+This prayers removes the markings on any target object containing \
+writing.  This includes scrolls, which lose their spells after \
+being neutralized with this spell.  However, neutralized scrolls retain \
+their magical energy, which might benefit any new prayers placed \
+on the scroll.
+
 PRAYER_FORTIFYFOOD=PRAYER_NOURISHING_FOOD
 PRAYER_NOURISHING_FOOD=<ABILITY>\
 Usage    : PRAYER "NOURISHING FOOD" [FOOD NAME]\n\r\
