@@ -1573,6 +1573,17 @@ allowed by the mud rules to attack each other, certain aspects (such as \
 hand-cuffing or subdueing) will fizzle out when the arresting player attempts \
 them.
 
+THIEF_FALSE_FAITH=THIEF_FALSEFAITH=
+FALSE_FAITH=THIEF_FALSEFAITH=
+THIEF_FALSEFAITH=<ABILITY>\
+Usage    : FALSEFAITH [DEITY NAME]/NONE/STOP]\n\r\
+Example  : ffaith Odin\n\r\
+Example  : ffaith none\n\r\
+Example  : ffaith stop\n\r\
+Short(s) : ffaith\n\r\
+The thief is so flexible in his or her beliefs that he can internally \
+take on a false faith which is able to fool all but the gods themselves.
+
 FIGHTER_FARSHOT=FAR_SHOT
 FARSHOT=FAR_SHOT
 FAR_SHOT=<ABILITY>\
@@ -2380,13 +2391,12 @@ give the name of the druid who summoned it as well.
 THIEF_MASK_FAITH=THIEF_MASKFAITH=
 MASK_FAITH=THIEF_MASKFAITH=
 THIEF_MASKFAITH=<ABILITY>\
-Usage    : MASKFAITH [DEITY NAME]/NONE/STOP]\n\r\
-Example  : mfaith Odin\n\r\
-Example  : mfaith none\n\r\
+Usage    : MASKFAITH\n\r\
+Example  : mfaith\n\r\
 Example  : mfaith stop\n\r\
 Short(s) : mfaith\n\r\
-The thief is so flexible in his or her beliefs that he can mask \
-his or her true faith.
+The thief is able to internally hide his or her true faith from most \
+means of detection or discernment.
 
 THIEF_MAST_SHOT=THIEF_MASTSHOT
 MAST_SHOT=THIEF_MASTSHOT
