@@ -18,7 +18,8 @@
  17. Scriptable MPGSET, STAT, etc.. now supports MAX char states (MAXHITS, etc)
  18. Achievements now support expiration/duration.
  19. More new faction change events: all coffeemud message (CMMsg) types.
- 20. New Thief Skills: Mask Faith
+ 20. New Thief Skills: Mask Faith, False Faith
+ 21. New Prayers: Neutralize Scroll
 
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
